# tokenmaxxer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.source.json  decode-antigravity-token.cjs  eslint.config.js  index.html  inspect-antigravity-db.cjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: platform-vault-verification.yml  release-packages.yml
docs/: LIVE_PROVIDER_SMOKE.md  PROVIDER_IMPLEMENTATION_MATRIX.md  RELEASE_CHECKLIST.md
hyperframes-tokenmaxxer-demo/: DESIGN.md  index.html  meta.json  package.json
public/: changelog.json
remotion/: Root.tsx  remotion.css
scripts/: create-updater-manifest.mjs  generate-changelog.mjs  prepare-release-artifacts.mjs  release-assets.mjs
src/: App.tsx  MarketingPage.tsx  ProductDemoState.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  paths.rs  scheduler.rs  state.rs  vault.rs
src-tauri/src/provider/: anthropic_api.rs  antigravity_remote.rs  aws_bedrock.rs  azure_openai.rs  claude_code.rs  codex.rs  contextual_ai.rs  cost.rs  cursor.rs  deepseek.rs  fireworks.rs  github_copilot.rs  mod.rs  openai_api.rs  openrouter.rs  reporting.rs  x_ai.rs  z_ai.rs
src-tauri/tests/: provider_live_smoke.rs
src/components/: AccountCard.tsx  AccountDetailsModal.tsx  AddAccountWizard.tsx  Logo.tsx  ProviderLogo.tsx  Sparkline.tsx  SummaryTiles.tsx  (+2 more)
(+3 files in other folders)
